# OpenCV

./: .gitignore  CMakeLists.txt  QtOpenCVWebpViewer  README.md  generate_wolf_ppt.py  imread_lesson_widget.cpp  imwrite_lesson_widget.cpp  imwrite_lesson_widget.h  main_window.cpp  main_window.h  mat_to_qimage.cpp  mat_to_qimage.h  morphology_trackbar_lesson_widget.cpp  morphology_trackbar_lesson_widget.h  named_window_lesson_widget.cpp  狼来了.pptx
.github/: copilot-instructions.md
01 生成并保存图片/: README.md  imwrite_lesson_widget.cpp
02 读取并显示图片/: README.md  imread_lesson_widget.cpp  imread_lesson_widget.h
03 窗口显示/: README.md  named_window_lesson_widget.h
04 腐蚀与膨胀/: README.md
05 边界提取/: README.md  erosion_boundary_lesson_widget.cpp  erosion_boundary_lesson_widget.h
06 点运算-灰度变换/: README.md  generate_images.py  point_gray_transform_lesson_widget.cpp  point_gray_transform_lesson_widget.h
07 点运算-直方图/: README.md  point_histogram_lesson_widget.cpp  point_histogram_lesson_widget.h
08 点运算-截断/: README.md  point_truncation_lesson_widget.cpp  point_truncation_lesson_widget.h
09 点运算-提升饱和度与颜色/: README.md  point_color_adjust_lesson_widget.cpp  point_color_adjust_lesson_widget.h
10 点运算-反相/: README.md  point_invert_lesson_widget.cpp  point_invert_lesson_widget.h
11 点运算-二值化/: README.md  point_threshold_lesson_widget.cpp  point_threshold_lesson_widget.h
12 点运算-对比度拉伸/: README.md  point_contrast_stretch_lesson_widget.cpp  point_contrast_stretch_lesson_widget.h
